--- a/01-intro/homework.ipynb
+++ b/01-intro/homework.ipynb
@@ -9,10 +9,11 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.linear_model import SGDRegressor\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.feature_extraction import DictVectorizer\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import joblib"
    ]
   },
   {
@@ -379,12 +380,13 @@
     "onehotDF['duration'] = cleandDF['duration']\n",
     "onehotDF = onehotDF.drop_duplicates()\n",
     "\n",
-    "onehotDFDict = onehotDF[['PULocationID','DOLocationID']].drop_duplicates().to_dict(orient='records')\n",
+    "#onehotDFDict = onehotDF[['PULocationID','DOLocationID']].drop_duplicates().to_dict(orient='records')\n",
     "dataDicts = onehotDF[['PULocationID', 'DOLocationID']].to_dict(orient='records')\n",
     "target = onehotDF['duration'].values\n",
     "\n",
     "del df\n",
-    "del cleandDF"
+    "del cleandDF\n",
+    "del onehotDF"
    ]
   },
   {
@@ -395,7 +397,8 @@
    "outputs": [],
    "source": [
     "dicVec = DictVectorizer(sparse=False)\n",
-    "feature_matrix = dicVec.fit_transform(onehotDFDict)\n",
+    "#feature_matrix = dicVec.fit_transform(onehotDFDict)\n",
+    "feature_matrix = dicVec.fit_transform(dataDicts)\n",
     "n_feature_cols = feature_matrix.shape[1]"
    ]
   },
@@ -415,6 +418,204 @@
    ],
    "source": [
     "print(f\"What's the dimensionality of this matrix (number of columns)?: {n_feature_cols}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e428ce66",
+   "metadata": {},
+   "source": [
+    "## Q5. Training a model\n",
+    "Now let's use the feature matrix from the previous step to train a model.\n",
+    "\n",
+    "Train a plain linear regression model with default parameters\n",
+    "Calculate the RMSE of the model on the training data\n",
+    "What's the RMSE on train?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7bac6f97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE on training data: 11.736663450001835\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the chunk size\n",
+    "chunk_size = 100  # You can adjust this according to your dataset size\n",
+    "\n",
+    "# Initialize the model\n",
+    "model = LinearRegression()\n",
+    "\n",
+    "# Initialize lists to store predictions and targets\n",
+    "all_predictions = []\n",
+    "all_targets = []\n",
+    "\n",
+    "# Iterate over the data in chunks\n",
+    "for i in range(0, len(feature_matrix), chunk_size):\n",
+    "    # Get the chunk of features and targets\n",
+    "    X_chunk = feature_matrix[i:i+chunk_size]\n",
+    "    y_chunk = target[i:i+chunk_size]\n",
+    "\n",
+    "    # Train the model on the chunk\n",
+    "    model.fit(X_chunk, y_chunk)\n",
+    "\n",
+    "for i in range(0, len(feature_matrix), chunk_size):\n",
+    "    # Get the chunk of features and targets\n",
+    "    X_chunk = feature_matrix[i:i+chunk_size]\n",
+    "    y_chunk = target[i:i+chunk_size]\n",
+    "    \n",
+    "    # Predict on the chunk\n",
+    "    chunk_predictions = model.predict(X_chunk)\n",
+    "    y_chunk = target[i:i+chunk_size]\n",
+    "\n",
+    "    # Store predictions and targets\n",
+    "    all_predictions.extend(chunk_predictions)\n",
+    "    all_targets.extend(y_chunk)\n",
+    "\n",
+    "# Calculate the RMSE\n",
+    "rmse = np.sqrt(mean_squared_error(all_targets, all_predictions))\n",
+    "print(\"RMSE on training data:\", rmse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "835ab186",
+   "metadata": {},
+   "source": [
+    "## Q6. Evaluating the model\n",
+    "Now let's apply this model to the validation dataset (February 2023).\n",
+    "\n",
+    "What's the RMSE on validation?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "cb4b02f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the trained model\n",
+    "joblib.dump(model, 'linear_regression_model.pkl')\n",
+    "\n",
+    "# Save the DictVectorizer object\n",
+    "joblib.dump(dicVec, 'dict_vectorizer.pkl')\n",
+    "\n",
+    "\n",
+    "%reset -f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "16accd97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.feature_extraction import DictVectorizer\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import joblib\n",
+    "\n",
+    "def cleaning_df(df):\n",
+    "    df['duration'] = df.apply(lambda x: abs( x['tpep_dropoff_datetime'] - x['tpep_pickup_datetime'] ).total_seconds() / 60.0, axis=1)\n",
+    "    cleandDF = df[(df['duration']>= 1.0) & (df['duration']<= 60.0)]\n",
+    "    onehotDF = pd.DataFrame()\n",
+    "\n",
+    "    onehotDF['PULocationID'] = cleandDF['PULocationID'].astype(str)\n",
+    "    onehotDF['DOLocationID'] = cleandDF['DOLocationID'].astype(str)\n",
+    "    onehotDF['duration'] = cleandDF['duration']\n",
+    "    onehotDF = onehotDF.drop_duplicates()\n",
+    "\n",
+    "    #onehotDFDict = onehotDF[['PULocationID','DOLocationID']].drop_duplicates().to_dict(orient='records')\n",
+    "    dataDicts = onehotDF[['PULocationID', 'DOLocationID']].to_dict(orient='records')\n",
+    "    target = onehotDF['duration'].values\n",
+    "\n",
+    "    del df\n",
+    "    del cleandDF\n",
+    "    del onehotDF\n",
+    "    \n",
+    "    return dataDicts, target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "77bfca4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the trained model\n",
+    "model = joblib.load('linear_regression_model.pkl')\n",
+    "\n",
+    "# Load the DictVectorizer object\n",
+    "dicVec = joblib.load('dict_vectorizer.pkl')\n",
+    "\n",
+    "df_validation = pd.read_parquet(\"https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2023-02.parquet\")\n",
+    "dataDicts, target = cleaning_df(df_validation)\n",
+    "del df_validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "72492999",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize lists to store predictions and targets\n",
+    "all_predictions = []\n",
+    "all_targets = []\n",
+    "\n",
+    "#dicVec = DictVectorizer(sparse=False)\n",
+    "#feature_matrix = dicVec.fit_transform(onehotDFDict)\n",
+    "feature_matrix = dicVec.transform(dataDicts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d0479fa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE on validation data: 11.892177834522558\n"
+     ]
+    }
+   ],
+   "source": [
+    "chunk_size = 100\n",
+    "\n",
+    "for i in range(0, len(feature_matrix), chunk_size):\n",
+    "    # Get the chunk of features and targets\n",
+    "    X_chunk = feature_matrix[i:i+chunk_size]\n",
+    "    y_chunk = target[i:i+chunk_size]\n",
+    "    \n",
+    "    # Predict on the chunk\n",
+    "    chunk_predictions = model.predict(X_chunk)\n",
+    "    y_chunk = target[i:i+chunk_size]\n",
+    "\n",
+    "    # Store predictions and targets\n",
+    "    all_predictions.extend(chunk_predictions)\n",
+    "    all_targets.extend(y_chunk)\n",
+    "\n",
+    "# Calculate the RMSE\n",
+    "rmse = np.sqrt(mean_squared_error(all_targets, all_predictions))\n",
+    "print(\"RMSE on validation data:\", rmse)"
    ]
   }
  ],
