--- a/04-deployment/homework.ipynb
+++ b/04-deployment/homework.ipynb
@@ -346,8 +346,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "id": "dcf92509",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What's the mean predicted duration?: 14.29\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"What's the mean predicted duration?: {14.29}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fcd7991",
+   "metadata": {},
+   "source": [
+    "## Q6. Docker container \n",
+    "\n",
+    "Finally, we'll package the script in the docker container. \n",
+    "For that, you'll need to use a base image that we prepared. \n",
+    "\n",
+    "This is what the content of this image is:\n",
+    "```\n",
+    "FROM python:3.10.13-slim\n",
+    "\n",
+    "WORKDIR /app\n",
+    "COPY [ \"model2.bin\", \"model.bin\" ]\n",
+    "```\n",
+    "\n",
+    "Note: you don't need to run it. We have already done it.\n",
+    "\n",
+    "It is pushed it to [`agrigorev/zoomcamp-model:mlops-2024-3.10.13-slim`](https://hub.docker.com/layers/agrigorev/zoomcamp-model/mlops-2024-3.10.13-slim/images/sha256-f54535b73a8c3ef91967d5588de57d4e251b22addcbbfb6e71304a91c1c7027f?context=repo),\n",
+    "which you need to use as your base image.\n",
+    "\n",
+    "That is, your Dockerfile should start with:\n",
+    "\n",
+    "```docker\n",
+    "FROM agrigorev/zoomcamp-model:mlops-2024-3.10.13-slim\n",
+    "\n",
+    "# do stuff here\n",
+    "```\n",
+    "\n",
+    "This image already has a pickle file with a dictionary vectorizer\n",
+    "and a model. You will need to use them.\n",
+    "\n",
+    "Important: don't copy the model to the docker image. You will need\n",
+    "to use the pickle file already in the image. \n",
+    "\n",
+    "Now run the script with docker. What's the mean predicted duration\n",
+    "for May 2023? \n",
+    "\n",
+    "* 0.19\n",
+    "* 7.24\n",
+    "* 14.24\n",
+    "* 21.19"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8ba73e5",
    "metadata": {},
    "outputs": [
     {
